Fix SSH keys name duplications...
Fix #124